# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  codegen.py  main.py  pyproject.toml  requirements.txt  utils.py  validators.py
2020/: main.py
2020/daily_solutions/: __init__.py  day_1.py  day_2.py  day_3.py  utils.py
2020/daily_solutions/tests/: test_day_1.py
2020/inputs/: config.py
core/: codegen.py  main.py  status_grid.py  test_utils.py  utils.py  validators.py
core/templates/: daily_template.jinja  daily_test_template.jinja  init_file.jinja
core/tests/: test_utils.py
daily_solutions/: __init__.py  base.py
daily_solutions/year_2020/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  utils.py
daily_solutions/year_2020/tests/: test_day_1.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
daily_solutions/year_2021/: __init__.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  utils.py
daily_solutions/year_2021/tests/: test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  (+7 more)
daily_solutions/year_2022/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py
templates/: daily_template.jinja  daily_test_template.jinja
year_2020/: main.py
year_2020/daily_solutions/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  utils.py
year_2020/inputs/: config.py
(+7 files in other folders)
