[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["Karen Sittig <kasittig1@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "core"}, {include = "daily_solutions"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
