[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["Karen Sittig <kasittig1@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "core"}, {include = "daily_solutions"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
click = "^8.1.3"
frozendict = "^2.3.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["tests", "daily_solutions", "core"]
